--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.1
-flask-pymongo==2.3.0
-python-dotenv==0.19.0
+Flask==3.0.3
+flask-cors==4.0.1
+pymongo==4.7.2
+python-dotenv==1.0.1
 azure-storage-blob==12.8.1
-pymongo==3.12.0
 flask-cors==3.0.10
